--- a/smos-data/smos-data.cabal
+++ b/smos-data/smos-data.cabal
@@ -27,6 +27,8 @@ library
   build-depends:
       aeson
     , aeson-pretty
+    , autodocodec
+    , autodocodec-yaml
     , base
     , bytestring
     , containers
@@ -44,5 +46,4 @@ library
     , validity-text
     , validity-time
     , yaml
-    , yamlparse-applicative
   default-language: Haskell2010
