--- a/smos-single/package.yaml
+++ b/smos-single/package.yaml
@@ -20,7 +20,7 @@ library:
     - smos-report
     - text
     - time
-    - yamlparse-applicative
+    - autodocodec
 
 executables:
   smos-single:
