--- a/smos-web-server/package.yaml
+++ b/smos-web-server/package.yaml
@@ -59,7 +59,7 @@ library:
   - wai-extra
   - warp
   - yaml
-  - yamlparse-applicative
+  - autodocodec
   - yesod
   - yesod-auth
   - yesod-autoreload
