--- a/smos-archive/smos-archive.cabal
+++ b/smos-archive/smos-archive.cabal
@@ -27,7 +27,8 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      base
+      autodocodec
+    , base
     , containers
     , envparse
     , exceptions
@@ -40,7 +41,6 @@ library
     , smos-report
     , time
     , validity
-    , yamlparse-applicative
   default-language: Haskell2010
 
 executable smos-archive
