--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -167,6 +167,7 @@ library
   ghc-options: -Wall
   build-depends:
       aeson
+    , autodocodec
     , base
     , containers
     , data-default
@@ -191,7 +192,6 @@ library
     , validity-text
     , validity-time
     , yaml
-    , yamlparse-applicative
   default-language: Haskell2010
 
 executable smos-calendar-import
@@ -239,6 +239,7 @@ test-suite smos-calendar-import-test
       sydtest-discover:sydtest-discover
   build-depends:
       QuickCheck
+    , autodocodec
     , base
     , bytestring
     , containers
@@ -262,5 +263,4 @@ test-suite smos-calendar-import-test
     , text
     , time
     , yaml
-    , yamlparse-applicative
   default-language: Haskell2010
