--- a/smos-github/package.yaml
+++ b/smos-github/package.yaml
@@ -28,7 +28,7 @@ library:
     - smos-report
     - text
     - time
-    - yamlparse-applicative
+    - autodocodec
 
 executables:
   smos-github:
