--- a/smos-github/smos-github.cabal
+++ b/smos-github/smos-github.cabal
@@ -32,6 +32,7 @@ library
   build-depends:
       aeson
     , async
+    , autodocodec
     , base
     , conduit
     , containers
@@ -46,7 +47,6 @@ library
     , smos-report
     , text
     , time
-    , yamlparse-applicative
   default-language: Haskell2010
 
 executable smos-github
