--- a/smos-notify/smos-notify.cabal
+++ b/smos-notify/smos-notify.cabal
@@ -31,6 +31,7 @@ library
   ghc-options: -Wall
   build-depends:
       aeson
+    , autodocodec
     , base
     , conduit
     , containers
@@ -50,7 +51,6 @@ library
     , smos-report
     , text
     , time
-    , yamlparse-applicative
   default-language: Haskell2010
 
 executable smos-notify
