--- a/smos-single/smos-single.cabal
+++ b/smos-single/smos-single.cabal
@@ -26,7 +26,8 @@ library
       src/
   ghc-options: -Wall
   build-depends:
-      base
+      autodocodec
+    , base
     , envparse
     , optparse-applicative
     , path
@@ -35,7 +36,6 @@ library
     , smos-report
     , text
     , time
-    , yamlparse-applicative
   default-language: Haskell2010
 
 executable smos-single
