--- a/smos-report/package.yaml
+++ b/smos-report/package.yaml
@@ -15,6 +15,8 @@ library:
   ghc-options: -Wall
   dependencies:
   - aeson
+  - autodocodec
+  - autodocodec-yaml
   - conduit
   - containers
   - cursor
@@ -35,4 +37,3 @@ library:
   - validity-path
   - validity-time
   - yaml
-  - autodocodec
