--- a/smos-calendar-import/smos-calendar-import.cabal
+++ b/smos-calendar-import/smos-calendar-import.cabal
@@ -240,6 +240,7 @@ test-suite smos-calendar-import-test
   build-depends:
       QuickCheck
     , autodocodec
+    , autodocodec-yaml
     , base
     , bytestring
     , containers
