--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -17,6 +17,8 @@ library:
   dependencies:
   - aeson
   - aeson-pretty
+  - autodocodec
+  - autodocodec-yaml
   - bytestring
   - conduit
   - containers
@@ -55,7 +57,6 @@ library:
   - wai-extra
   - warp
   - yaml
-  - autodocodec
   - zip
   - zstd
 
