--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -89,6 +89,7 @@ library
   build-depends:
       aeson
     , autodocodec
+    , autodocodec-yaml
     , base
     , base16-bytestring
     , bytestring
