--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -173,6 +173,7 @@ library
       aeson
     , aeson-pretty
     , autodocodec
+    , autodocodec-yaml
     , base >=4.7
     , bytestring
     , cmark-gfm
