--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,5 @@
 resolver: lts-16.12
 packages:
-- /home/syd/src/autodocodec/autodocodec
-- /home/syd/src/autodocodec/autodocodec-yaml
-- /home/syd/src/autodocodec/autodocodec-schema
-
 - smos
 - smos-data
 - smos-data-gen
@@ -138,12 +134,12 @@ extra-deps:
     - cursor
     - cursor-gen
 
-      # - github: NorfairKing/autodocodec
-      #   commit: 46be3a83290d803c18779292903908d77e4af612
-      #   subdirs:
-      #     - autodocodec
-      #     - autodocodec-yaml
-      #     - autodocodec-schema
+- github: NorfairKing/autodocodec
+  commit: c1687a96fcd98be2e4aece275342dbb39011be19
+  subdirs:
+    - autodocodec
+    - autodocodec-yaml
+    - autodocodec-schema
 
 - github: NorfairKing/yamlparse-applicative
   commit: 0edf8b9ebe7aa2d834f5376a39a3ccab39727cdb
@@ -161,7 +157,7 @@ extra-deps:
   - safe-coloured-text-terminfo
 
 - github: NorfairKing/sydtest
-  commit: a230bf791b0bced918092bbc9c3b54608b2a3a48
+  commit: e75c55b920936e344b779093b2a0318fb35d1770
   subdirs:
     - sydtest
     - sydtest-aeson
