parse yaml first, only parse json if that fails

--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -69,10 +69,11 @@ benchmarks:
     - -Wall
     dependencies:
     - QuickCheck
+    - containers
     - criterion
+    - genvalidity
     - genvalidity-containers
     - genvalidity-criterion
-    - genvalidity
+    - path
     - smos-data
     - smos-data-gen
-    - containers
