--- a/smos-archive/smos-archive.cabal
+++ b/smos-archive/smos-archive.cabal
@@ -18,6 +18,8 @@ build-type:     Simple
 library
   exposed-modules:
       Smos.Archive
+      Smos.Archive.Commands
+      Smos.Archive.Commands.File
       Smos.Archive.OptParse
       Smos.Archive.OptParse.Types
       Smos.Archive.Prompt
@@ -58,9 +60,9 @@ test-suite smos-archive-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Smos.Archive.Commands.FileSpec
       Smos.Archive.IntegrationSpec
       Smos.Archive.PromptSpec
-      Smos.ArchiveSpec
       Paths_smos_archive
   hs-source-dirs:
       test
