--- a/smos-archive/smos-archive.cabal
+++ b/smos-archive/smos-archive.cabal
@@ -19,7 +19,9 @@ library
   exposed-modules:
       Smos.Archive
       Smos.Archive.Commands
+      Smos.Archive.Commands.Export
       Smos.Archive.Commands.File
+      Smos.Archive.Env
       Smos.Archive.OptParse
       Smos.Archive.OptParse.Types
       Smos.Archive.Prompt
@@ -31,17 +33,22 @@ library
   build-depends:
       autodocodec
     , base
+    , bytestring
+    , conduit
     , containers
     , envparse
     , exceptions
     , filepath
+    , monad-logger
     , mtl
     , optparse-applicative
     , path
     , path-io
     , smos-data
     , smos-report
+    , text
     , time
+    , unliftio
     , validity
   default-language: Haskell2010
 
@@ -60,6 +67,7 @@ test-suite smos-archive-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Smos.Archive.Commands.ExportSpec
       Smos.Archive.Commands.FileSpec
       Smos.Archive.IntegrationSpec
       Smos.Archive.PromptSpec
@@ -71,13 +79,19 @@ test-suite smos-archive-test
       sydtest-discover:sydtest-discover
   build-depends:
       base
+    , bytestring
     , containers
+    , dirforest
     , genvalidity-sydtest
+    , monad-logger
+    , mtl
     , path
     , path-io
     , smos-archive
     , smos-data
     , smos-data-gen
+    , smos-report
+    , smos-report-gen
     , sydtest
     , time
   default-language: Haskell2010
