LTS Upgrade to 18.16

--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -75,5 +75,6 @@ benchmarks:
     - genvalidity-containers
     - genvalidity-criterion
     - path
+    - path-io
     - smos-data
     - smos-data-gen
