--- a/smos-data-gen/smos-data-gen.cabal
+++ b/smos-data-gen/smos-data-gen.cabal
@@ -95,6 +95,7 @@ benchmark smos-data-bench
     , genvalidity-containers
     , genvalidity-criterion
     , path
+    , path-io
     , smos-data
     , smos-data-gen
   default-language: Haskell2010
