--- a/smos-github/smos-github.cabal
+++ b/smos-github/smos-github.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.5.
 --
 -- see: https://github.com/sol/hpack
 
@@ -12,6 +12,7 @@ maintainer:     syd@cs-syd.eu
 license:        MIT
 build-type:     Simple
 extra-source-files:
+    test_resources/project-path.txt
     test_resources/pull-request-with-details.smos
     test_resources/pull-request-without-details.smos
 
@@ -51,6 +52,7 @@ library
     , text
     , time
     , validity
+    , validity-path
     , validity-text
   default-language: Haskell2010
 
@@ -87,6 +89,7 @@ test-suite smos-data-test
     , genvalidity-text
     , genvalidity-time
     , github
+    , path
     , smos-data-gen
     , smos-github
     , sydtest
