Database migration tests

--- a/smos-server-gen/package.yaml
+++ b/smos-server-gen/package.yaml
@@ -84,6 +84,7 @@ tests:
     - smos-server-gen
     - sydtest
     - sydtest-persistent
+    - sydtest-persistent-sqlite
     - sydtest-servant
     - text
     - time
