--- a/smos-sync-client-gen/smos-sync-client-gen.cabal
+++ b/smos-sync-client-gen/smos-sync-client-gen.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -11,6 +11,8 @@ author:         Tom Sydney Kerckhove
 maintainer:     syd@cs-syd.eu
 license:        MIT
 build-type:     Simple
+extra-source-files:
+    test_resources/migration.sql
 
 library
   exposed-modules:
@@ -54,6 +56,7 @@ test-suite smos-sync-client-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Smos.Sync.Client.DBSpec
       Smos.Sync.Client.IntegrationSpec
       Smos.Sync.Client.LoginSpec
       Smos.Sync.Client.Sync.ContentsMapSpec
