refactored the home manager module docs rendering

--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -120,6 +120,7 @@ extra-source-files:
     templates/home.hamlet
     templates/menu.hamlet
     templates/nixos-module.hamlet
+    templates/option-docs.hamlet
     templates/page.hamlet
     templates/smos-actions.hamlet
     templates/smos-asciinema/spec.hamlet
