renamed the stripe client to smos-stripe-client

--- a/smos-server/package.yaml
+++ b/smos-server/package.yaml
@@ -44,7 +44,7 @@ library:
   - smos-api
   - smos-data
   - smos-report
-  - stripe-client
+  - smos-stripe-client
   - template-haskell
   - text
   - time
