--- a/smos-web-server/smos-web-server.cabal
+++ b/smos-web-server/smos-web-server.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -110,10 +110,10 @@ library
     , shakespeare
     , smos
     , smos-client
+    , smos-stripe-client
     , smos-sync-client
     , smos-web-style
     , stm
-    , stripe-client
     , template-haskell
     , text
     , time
