--- a/smos-server/smos-server.cabal
+++ b/smos-server/smos-server.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.6.
+-- This file has been generated from package.yaml by hpack version 0.34.7.
 --
 -- see: https://github.com/sol/hpack
 
@@ -97,7 +97,7 @@ library
     , smos-api
     , smos-data
     , smos-report
-    , stripe-client
+    , smos-stripe-client
     , template-haskell
     , text
     , time
