--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -42,6 +42,7 @@ extra-source-files:
     content/changelogs/2022-01-27.markdown
     content/changelogs/2022-05-04.markdown
     content/changelogs/2022-05-19.markdown
+    content/changelogs/2022-05-27.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
