--- a/smos-docs-site/smos-docs-site.cabal
+++ b/smos-docs-site/smos-docs-site.cabal
@@ -44,6 +44,7 @@ extra-source-files:
     content/changelogs/2022-05-19.markdown
     content/changelogs/2022-05-27.markdown
     content/changelogs/2022-06-09.markdown
+    content/changelogs/2022-06-27.markdown
     content/pages/blogposts.markdown
     content/pages/building-installation.markdown
     content/pages/cheat-sheet.markdown
